add testing, dockerfile and ci
